Usunięcie definicji Definicja 2.17 (Przestrzen generowana przez zbiór [13, Sec 7.1 Def 7.13]).

--- a/magisterska.tex
+++ b/magisterska.tex
@@ -149,7 +149,7 @@ W niniejszej pracy zostały użyte następujące oznaczenia:
 \\$[a_{ij}]$ - macierz kwadratowa,
 \\$\mathbb{M}_{m \times n}(\setK)$ - zbiór wszystkich macierzy o~wymiarach $m$ na $n$ i~elementach z~ciała $\setK$,
 \\$\mathcal{V}$ - przestrzeń liniowa,
-\\$\przestrzen{\mathit{X}}$ - przestrzeń generowana przez zbiór $\mathit{X}$,
+%\\$\przestrzen{\mathit{X}}$ - przestrzeń generowana przez zbiór $\mathit{X}$,
 \\$(\Omega, \mathcal{F}, P)$ - przestrzeń probabilistyczna,
 \\$\Omega$ - zbiór zdarzeń elementarnych,
 \\$\mathcal{F}$ - rodzina podzbiorów zbioru $\Omega$,
@@ -294,15 +294,6 @@ W kolejnych definicjach korzystamy z~pojęć przestrzeni liniowej, wymiaru oraz 
 Rzędem macierzy $\mathbb{A}$ nazywamy wspólną wartość rzędu kolumnowego i~wierszowego macierzy $\mathbb{A}$. Rząd macierzy oznaczamy symbolem $\rz{\mathbb{A}}$.
 \end{df}
 
-\begin{df}[Przestrzeń generowana przez zbiór {\citep[Sec 7.1 Def 7.13]{alzega}}]
-Niech $\mathit{X}$ będzie dowolnym i~niepustym podzbiorem przestrzeni liniowej $\mathcal{V}$. Podprzestrzenią generowaną przez zbiór $\mathit{X}$ nazywamy zbiór wszystkich  skończonych kombinacji liniowych wektorów ze zbioru $\mathit{X}$. Zbiór ten oznaczamy symbolem $\przestrzen{\mathit{X}}$.
-
-Symbolicznie zapisujemy zbiór $\przestrzen{\mathit{X}}$ jako:
-$$
-\set{x \in \mathcal{V} : \exists_{n \in \setN} \: \exists_{(\alpha_1, \ldots, \alpha_n) \in \setK^n } \: \exists_{(x_1, \ldots, x_n) \in \mathit{X}^n} \: (x = \alpha_1 \cdot x_1 + \ldots + \alpha_n \cdot x_n)},
-$$
-gdzie $\mathcal{V}$ jest przestrzenią liniową nad ciałem liczb rzeczywistych lub ciałem liczb zespolonych $\setK$.
-\end{df}
 
 \begin{df}[Wartość własna macierzy kwadratowej {\citep[Sec 13.1]{ealIII}}]
 Liczbę $\lambda \in \setK$ nazywamy wartością własną macierzy kwadratowej $\mathbb{A}$, jeżeli istnieje niezerowy wektor $\mathbf{x}$ taki, że
